@@ -1,3 +1,7 @@
+2003-10-24  Andrew Cagney  <cagney@redhat.com>
+
+	* annotate.texinfo: Fix "fortunatly"[sic].
+
 2003-10-23  Kei Sakamoto  <sakamoto.kei@renesas.com>
 
 	* gdb.texinfo (Contributors to GDB): Replace "Renesas"
